Changed the logo to word for now

--- a/contactus.html
+++ b/contactus.html
@@ -32,6 +32,7 @@
       <nav>
       <a href="index.html">
         <img class="logo" src="assets/logo.png" alt="Kneipp Homespa Logo" />
+        Naya Spa
       </a>
 
       <!-- viola -> a pure CSS mobile navigation dropdown! -->
