--- a/services.html
+++ b/services.html
@@ -51,7 +51,8 @@
     <header>
       <nav>
       <a href="index.html">
-        <img class="logo" src="assets/logo.png" alt="Kneipp Homespa Logo" />
+        <!-- <img class="logo" src="assets/logo.png" alt="Kneipp Homespa Logo" /> -->
+        Naya Spa
       </a>
 
       <!-- viola -> a pure CSS mobile navigation dropdown! -->
